--- a/thesis/Implementation.lyx
+++ b/thesis/Implementation.lyx
@@ -14,7 +14,7 @@ fixltx2e
 initials
 \end_modules
 \maintain_unincluded_children false
-\language french
+\language english
 \language_package default
 \inputencoding auto
 \fontencoding global
@@ -424,7 +424,7 @@ Source Code Package : Tarball
 \end_layout
 
 \begin_layout Subsection
-Revision System : Subversion (SVN)
+Revision System : Git
 \end_layout
 
 \begin_layout Section
@@ -944,1257 +944,6 @@ Code Architecture
 
 \begin_layout Subsection
 Application Programming Interface
-\end_layout
-
-\begin_layout Standard
-
-\lang english
-\begin_inset Note Note
-status collapsed
-
-\begin_layout Plain Layout
-
-\lang english
-To validate our vision about search features on Quran, we work in implementing
- them through the API of Alfanous.
- Alfanous is an open source project that aims to build an indexing/search
- API in Quran and use it to develop different interfaces: Web, Desktop...etc.
- Alfanous API is pure python, prototyped from the library whoosh which is
- a fast, featureful full-text indexing and searching library implemented
- in pure Python.
- Programmers can use it to easily add search functionality to their applications
- and websites.
- Every part of how Whoosh works can be extended or replaced to meet specific
- needs exactly.
- The API helps the researchers and developers that working on Quran applications
- and want to take the benefits of search.
- Alfanous API is: 
-\end_layout
-
-\begin_layout Itemize
-
-\lang english
-Easy to use, by virtue of a JSON output system that interacts with the API.
- This last can be used as a wrapping to other programming languages.
-\end_layout
-
-\begin_layout Itemize
-
-\lang english
-Easy to customize(prototyping), because the simplicity and clarity of code.
-\end_layout
-
-\begin_layout Itemize
-
-\lang english
-Free Open Source, developed under the license AGPL (Affero General Public
- License).
-\end_layout
-
-\begin_layout Plain Layout
-
-\lang english
-We’ll show here some snippets of code for some available functions in Alfanous
- API :
-\end_layout
-
-\begin_layout Enumerate
-
-\lang english
-Import the Quranic Search Engine and instantiate it.
-\begin_inset Newline newline
-\end_inset
-
-
-\family typewriter
-\size scriptsize
-\color red
->>>
-\color inherit
- 
-\color blue
-from
-\color inherit
- alfanous.main 
-\color blue
-import
-\color inherit
- QuranicSearchEngine\SpecialChar \textcompwordmark{}
- 
-\begin_inset Newline newline
-\end_inset
-
-
-\color red
->>>
-\color inherit
- QSE = QuranicSearchEngine(
-\shape italic
-\color magenta
-"./indexes/main/"
-\shape default
-\color inherit
-)
-\begin_inset Newline newline
-\end_inset
-
-<__main__.QuranicSearchEngine instance at 
-\color red
-0xb77d168c
-\color inherit
->
-\begin_inset Newline newline
-\end_inset
-
-
-\color red
->>>
-\color inherit
- QSE.OK
-\begin_inset Newline newline
-\end_inset
-
-
-\color blue
-True 
-\begin_inset Newline newline
-\end_inset
-
-\SpecialChar \textcompwordmark{}
-
-\end_layout
-
-\begin_layout Enumerate
-
-\lang english
-Make a search operation and browse the ayahs’ text.
-\begin_inset Newline newline
-\end_inset
-
-
-\family typewriter
-\size scriptsize
-\color red
->>>
-\color inherit
- results,_ =QSE.search_all(u
-\family default
-\shape italic
-"
-\lang arabic_arabi
-الحمد
-\lang english
-"
-\family typewriter
-\shape default
-) 
-\begin_inset Newline newline
-\end_inset
-
-
-\color red
->>>
-\color inherit
- 
-\color blue
-for
-\color inherit
- r 
-\color blue
-in
-\color inherit
- results: 
-\begin_inset Newline newline
-\end_inset
-
-
-\color red
-...
-
-\color inherit
- 
-\begin_inset space ~
-\end_inset
-
-
-\begin_inset space ~
-\end_inset
-
-
-\begin_inset space ~
-\end_inset
-
-
-\begin_inset space ~
-\end_inset
-
-
-\color blue
-print
-\color inherit
- r[
-\shape italic
-\color magenta
-"aya"
-\shape default
-\color inherit
-]
-\begin_inset Newline newline
-\end_inset
-
-[
-\family default
-\lang arabic_arabi
-الحمد لله رب العالمين
-\family typewriter
-\lang english
-]
-\begin_inset Newline newline
-\end_inset
-
-
-\family default
-\size default
-\SpecialChar \textcompwordmark{}
-
-\end_layout
-
-\begin_layout Enumerate
-
-\lang english
-Show more information for each result: surah name, ayah number, and ayah
- vocalized text.
-\begin_inset Newline newline
-\end_inset
-
-
-\family typewriter
-\size scriptsize
-\color red
->>>
-\color inherit
- 
-\color blue
-for
-\color inherit
- r 
-\color blue
-in
-\color inherit
- results:
-\begin_inset Newline newline
-\end_inset
-
-
-\color red
-...
-
-\color inherit
- 
-\begin_inset space ~
-\end_inset
-
-
-\begin_inset space ~
-\end_inset
-
-
-\begin_inset space ~
-\end_inset
-
-
-\begin_inset space ~
-\end_inset
-
-
-\color blue
-print
-\color inherit
- r[
-\shape italic
-\color magenta
-"sura_name"
-\shape default
-\color inherit
-],
-\shape italic
-\color magenta
-":"
-\shape default
-\color inherit
-,r[
-\shape italic
-\color magenta
-"aya_id"
-\shape default
-\color inherit
-],
-\shape italic
-\color magenta
-":"
-\shape default
-\color inherit
-,r[
-\shape italic
-\color magenta
-"aya_"
-\shape default
-\color inherit
-] 
-\begin_inset Newline newline
-\end_inset
-
-
-\family default
-\lang arabic_arabi
-الفاتحة
-\family typewriter
-\lang english
-:
-\color red
-2
-\color inherit
-:
-\family default
-\lang arabic_arabi
-الْحَمْدُ لِلَّهِ رَبِّ الْعَالَمِينَ
-\end_layout
-
-\begin_layout Enumerate
-
-\lang english
-Show the terms generated from a query.
-\begin_inset Newline newline
-\end_inset
-
-
-\family typewriter
-\size scriptsize
-\color red
->>>
-\color inherit
- _, terms = QSE.search_all(u
-\shape italic
-\color magenta
-"
-\family default
-\shape default
-\color inherit
-\lang arabic_arabi
-الحمد
-\family typewriter
-\shape italic
-\color magenta
-\lang english
-"
-\shape default
-\color inherit
-) 
-\begin_inset Newline newline
-\end_inset
-
-
-\color red
->>>
-\color inherit
- 
-\color blue
-print
-\color inherit
- terms
-\begin_inset Newline newline
-\end_inset
-
-(
-\shape italic
-\color magenta
-"aya"
-\shape default
-\color inherit
-,u
-\shape italic
-\color magenta
-"
-\family default
-\shape default
-\color inherit
-\lang arabic_arabi
-الحمد
-\family typewriter
-\shape italic
-\color magenta
-\lang english
-"
-\shape default
-\color inherit
-)] 
-\begin_inset Newline newline
-\end_inset
-
-\SpecialChar \textcompwordmark{}
-
-\end_layout
-
-\begin_layout Enumerate
-
-\lang english
-Use the terms to highlight the ayah text.
-\begin_inset Newline newline
-\end_inset
-
-
-\family typewriter
-\size scriptsize
-\color red
->>>
-\color inherit
- Qhighlight(u
-\shape italic
-\color magenta
-"
-\family default
-\shape default
-\color inherit
-\lang arabic_arabi
-الْحَمْدُ لِلَّهِ رَبِّ الْعَالَمِينَ
-\family typewriter
-\shape italic
-\color magenta
-\lang english
-"
-\shape default
-\color inherit
-, [u
-\shape italic
-\color magenta
-"
-\family default
-\shape default
-\color inherit
-\lang arabic_arabi
-الحمد
-\family typewriter
-\shape italic
-\color magenta
-\lang english
-"
-\shape default
-\color inherit
-, u
-\shape italic
-\color magenta
-"
-\family default
-\shape default
-\color inherit
-\lang arabic_arabi
-لله
-\family typewriter
-\shape italic
-\color magenta
-\lang english
-"
-\shape default
-\color inherit
-])
-\begin_inset Newline newline
-\end_inset
-
-<span style="color:red;font-size:100.0%"><b>
-\family default
-\lang arabic_arabi
-الْحَمْد
-\family typewriter
-ُ
-\lang english
-</b></span>
-\begin_inset Newline newline
-\end_inset
-
-<span style="color:green;font-size:100.0%"><b>
-\family default
-\lang arabic_arabi
-لِلَّـه
-\family typewriter
-ِ
-\lang english
-</b></span>
-\begin_inset Newline newline
-\end_inset
-
-
-\family default
-\lang arabic_arabi
-رَبِّ الْعَالَمِينَ
-\lang english
-
-\begin_inset Newline newline
-\end_inset
-
-\SpecialChar \textcompwordmark{}
-
-\end_layout
-
-\begin_layout Enumerate
-
-\lang english
-Show the estimated search time and the number of results.
-\begin_inset Newline newline
-\end_inset
-
-
-\family typewriter
-\size scriptsize
-\color red
->>>
-\color inherit
- 
-\color blue
-print
-\color inherit
- 
-\shape italic
-\color magenta
-"time=%f,number=%d"
-\shape default
-\color inherit
- 
-\color blue
-%
-\color inherit
- (results.runtime,len(results))
-\begin_inset Newline newline
-\end_inset
-
-time=
-\color red
-0.100318
-\color inherit
-,number=
-\color red
-160
-\begin_inset Newline newline
-\end_inset
-
-\SpecialChar \textcompwordmark{}
-
-\end_layout
-
-\begin_layout Enumerate
-
-\lang english
-Suggest in the case of missing terms.
-\begin_inset Newline newline
-\end_inset
-
-
-\family typewriter
-\size scriptsize
-\color red
->>>
-\color inherit
- 
-\color blue
-for
-\color inherit
- key, value 
-\color blue
-in
-\color inherit
- QSE.suggest_all(u
-\shape italic
-\color magenta
-"
-\color green
- 
-\family default
-\shape default
-\color inherit
-\lang arabic_arabi
-عاصمو
-\family typewriter
-\shape italic
-\color green
-\lang english
- 
-\color magenta
-"
-\shape default
-\color inherit
-).items(): 
-\begin_inset Newline newline
-\end_inset
-
-
-\color red
-...
-
-\color inherit
- 
-\begin_inset space ~
-\end_inset
-
-
-\begin_inset space ~
-\end_inset
-
-
-\begin_inset space ~
-\end_inset
-
-
-\begin_inset space ~
-\end_inset
-
-
-\begin_inset space ~
-\end_inset
-
- 
-\color blue
-print 
-\color inherit
-key, 
-\shape italic
-\color magenta
-":"
-\shape default
-\color inherit
-, 
-\shape italic
-\color magenta
-","
-\shape default
-\color inherit
-.join(value)
-\begin_inset Newline newline
-\end_inset
-
-
-\family default
-\lang arabic_arabi
-عاصمو :عاصم
-\lang english
-
-\begin_inset Newline newline
-\end_inset
-
-\SpecialChar \textcompwordmark{}
-
-\end_layout
-
-\begin_layout Plain Layout
-
-\lang english
-In this table, we’ll mention some specific queries already implemented in
- the API:
-\end_layout
-
-\begin_layout Plain Layout
-
-\lang english
-\begin_inset Float table
-placement htbp
-wide false
-sideways false
-status collapsed
-
-\begin_layout Plain Layout
-
-\lang english
-\begin_inset Caption
-
-\begin_layout Plain Layout
-
-\lang english
-Advanced Query in Alfanous
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Plain Layout
-\align center
-
-\lang english
-\begin_inset Tabular
-<lyxtabular version="3" rows="16" columns="2">
-<features tabularvalignment="middle">
-<column alignment="center" valignment="top" width="0pt">
-<column alignment="center" valignment="top" width="0pt">
-<row>
-<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-
-\lang english
-Feature
-\end_layout
-
-\end_inset
-</cell>
-<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" rightline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-
-\lang english
-Syntax
-\end_layout
-
-\end_inset
-</cell>
-</row>
-<row>
-<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-
-\lang english
-simple search
-\end_layout
-
-\end_inset
-</cell>
-<cell alignment="center" valignment="top" topline="true" leftline="true" rightline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-
-\lang english
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-
-\backslash
-begin{Arabic}
-\end_layout
-
-\end_inset
-
-سماكم
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-
-\backslash
-end{Arabic}
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\end_inset
-</cell>
-</row>
-<row>
-<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-
-\lang english
-derivation level 1
-\end_layout
-
-\end_inset
-</cell>
-<cell alignment="center" valignment="top" topline="true" leftline="true" rightline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-
-\lang english
->
-\lang arabic_arabi
-سماكم
-\end_layout
-
-\end_inset
-</cell>
-</row>
-<row>
-<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-
-\lang english
-derivation level 2 
-\end_layout
-
-\end_inset
-</cell>
-<cell alignment="center" valignment="top" topline="true" leftline="true" rightline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-
-\lang english
->>
-\lang arabic_arabi
-سماكم
-\end_layout
-
-\end_inset
-</cell>
-</row>
-<row>
-<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-
-\lang english
-joker ? 
-\end_layout
-
-\end_inset
-</cell>
-<cell alignment="center" valignment="top" topline="true" leftline="true" rightline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-
-\lang english
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-
-\backslash
-begin{Arabic}
-\end_layout
-
-\end_inset
-
-ال؟لك
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-
-\backslash
-end{Arabic}
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\end_inset
-</cell>
-</row>
-<row>
-<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-
-\lang english
-joker * 
-\end_layout
-
-\end_inset
-</cell>
-<cell alignment="center" valignment="top" topline="true" leftline="true" rightline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-
-\lang english
-*
-\lang arabic_arabi
-نبي
-\lang english
-*
-\end_layout
-
-\end_inset
-</cell>
-</row>
-<row>
-<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-
-\lang english
-phrase 
-\end_layout
-
-\end_inset
-</cell>
-<cell alignment="center" valignment="top" topline="true" leftline="true" rightline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-
-\lang english
-"
-\lang arabic_arabi
-رب العالمين
-\lang english
-"
-\end_layout
-
-\end_inset
-</cell>
-</row>
-<row>
-<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-
-\lang english
-logical relation : AND 
-\end_layout
-
-\end_inset
-</cell>
-<cell alignment="center" valignment="top" topline="true" leftline="true" rightline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-
-\lang english
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-
-\backslash
-begin{Arabic}
-\end_layout
-
-\end_inset
-
-الصلاة + الزكاة
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-
-\backslash
-end{Arabic}
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\end_inset
-</cell>
-</row>
-<row>
-<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-
-\lang english
-logical relation : OR
-\end_layout
-
-\end_inset
-</cell>
-<cell alignment="center" valignment="top" topline="true" leftline="true" rightline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-
-\lang english
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-
-\backslash
-begin{Arabic}
-\end_layout
-
-\end_inset
-
-الصلاة | الزكاة
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-
-\backslash
-end{Arabic}
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\end_inset
-</cell>
-</row>
-<row>
-<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-
-\lang english
-logical relation : ANDNOT
-\end_layout
-
-\end_inset
-</cell>
-<cell alignment="center" valignment="top" topline="true" leftline="true" rightline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-
-\lang english
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-
-\backslash
-begin{Arabic}
-\end_layout
-
-\end_inset
-
-الصلاة - الزكاة
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-
-\backslash
-end{Arabic}
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\end_inset
-</cell>
-</row>
-<row>
-<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-
-\lang english
-synonyms
-\end_layout
-
-\end_inset
-</cell>
-<cell alignment="center" valignment="top" topline="true" leftline="true" rightline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-
-\lang english
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-
-\backslash
-begin{Arabic}
-\end_layout
-
-\end_inset
-
-~السعير
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-
-\backslash
-end{Arabic}
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\end_inset
-</cell>
-</row>
-<row>
-<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-
-\lang english
-fields
-\end_layout
-
-\end_inset
-</cell>
-<cell alignment="center" valignment="top" topline="true" leftline="true" rightline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-
-\lang english
-sura:
-\lang arabic_arabi
-الفاتحة
-\end_layout
-
-\end_inset
-</cell>
-</row>
-<row>
-<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-
-\lang english
-interval 
-\end_layout
-
-\end_inset
-</cell>
-<cell alignment="center" valignment="top" topline="true" leftline="true" rightline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-
-\lang english
-sura_id:[112 to 114]
-\end_layout
-
-\end_inset
-</cell>
-</row>
-<row>
-<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-
-\lang english
-vocalization
-\end_layout
-
-\end_inset
-</cell>
-<cell alignment="center" valignment="top" topline="true" leftline="true" rightline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-
-\lang english
-'
-\lang arabic_arabi
-المَلك
-\lang english
-'
-\end_layout
-
-\end_inset
-</cell>
-</row>
-<row>
-<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-
-\lang english
-word properties tuple 
-\end_layout
-
-\end_inset
-</cell>
-<cell alignment="center" valignment="top" topline="true" leftline="true" rightline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-
-\lang english
-{
-\lang arabic_arabi
-ملك,فعل
-\lang english
-}
-\end_layout
-
-\end_inset
-</cell>
-</row>
-<row>
-<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-
-\lang english
-transliteration: buckwalter
-\end_layout
-
-\end_inset
-</cell>
-<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" rightline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-
-\lang english
-fawoqa
-\end_layout
-
-\end_inset
-</cell>
-</row>
-</lyxtabular>
-
-\end_inset
-
-
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\end_inset
-
-
 \end_layout
 
 \begin_layout Subsection
